# bfe-tools

./: .gitignore  AGENTS.md  AI_MEMORY.md  CLAUDE.md  README.md  TASK_MEMORY.md  clean.sh  dev.sh  package.json
.agents/: agent-registry.md  ai-memory.md  coding-standards.md  collaboration.md  context-compression-guidelines.md  continuous-learning.md  execution-mode-guidelines.md  git-workflow.md  orchestrator.md  quality-checklist.md  skills.md  spec-governance.md  task-memory.md  task-routing.md  testing-guidelines.md  workflow.md
.agents/coding-standards/: common.md  typescript.md
.agents/contexts/: debug.md  development.md  research.md  review.md
.agents/hooks/: pre-commit.md  pre-edit.md  session-end.md  session-start.md
.agents/skills/agent-workflow/: SKILL.md
.agents/skills/ccb-bridge/: SKILL.md
.agents/skills/code-review/: SKILL.md
.agents/skills/commit-helper/: SKILL.md
.agents/skills/context-handoff/: SKILL.md
.agents/skills/memory-update/: SKILL.md
.agents/skills/multi-agent-orchestrate/: SKILL.md
.agents/skills/onboard/: SKILL.md
.agents/skills/receiving-code-review/: SKILL.md
.agents/skills/solution-brainstorm/: SKILL.md
.agents/skills/systematic-debug/: SKILL.md
.ccb/: README.md  ccb.config  ccb_memory.md  clean.sh  restart.sh  start.sh  stop.sh
.changes/: README.md  index.md
.claude/commands/: agent-workflow.md  ccb-bridge.md  code-review.md  commit-helper.md  context-handoff.md  memory-update.md  multi-agent-orchestrate.md  onboard.md  receiving-code-review.md  solution-brainstorm.md  systematic-debug.md  test-driven-development.md
bun-server/: .gitignore  package.json  tsconfig.json
bun-server/src/: index.ts
bun-server/src/lib/: html-css.ts
desktop/: .gitignore  README.md  package-lock.json  package.json  pnpm-lock.yaml
desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.embed.conf.json  tauri.url.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: generate_icons.py  icon.icns
desktop/src-tauri/src/: backend.rs  csp.rs  lib.rs  main.rs
desktop/stub/: index.html
py-server/: .gitignore  README.md  pyproject.toml  start.sh
py-server/app/: main.py
py-server/app/api/v1/: __init__.py  tools.py
py-server/app/core/: config.py
py-server/app/db/: database.py  models.py
py-server/app/engine/: __init__.py  image_batch_engine.py  pdf_engine.py  perf_snapshot_engine.py  screenshot_engine.py  stt_engine.py  transcode_engine.py  url_to_pdf_engine.py
py-server/app/lib/: browser_manager.py
py-server/app/schemas/: common.py
py-server/app/services/: job.py  upload.py
py-server/tests/: test_jobs.py  test_upload.py
scripts/: _check-common.sh  doctor.sh  validate-spec.sh
server/: .gitignore  pyproject.toml  start.sh
server/app/: __init__.py  main.py
server/app/api/v1/: jobs.py  upload.py
server/app/core/: __init__.py  config.py  security.py
server/app/engine/: __init__.py  html_to_image_engine.py  ocr_engine.py  screenshot_engine.py  transcode_engine.py  tts_engine.py  video_keyframe_engine.py  watermark_engine.py
server/app/lib/: browser_manager.py  zip_utils.py
server/app/schemas/: common.py  job.py
server/app/services/: __init__.py  job.py
server/app/utils/: __init__.py
server/tests/: __init__.py  conftest.py
tests/: spec-integrity.test
web/: .env.example  .gitignore  README.md  env.d.ts  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.node.json  uno.config.js  uno.config.ts  vite.config.js  vite.config.ts  vitest.config.ts
web/public/: controller.html
web/src/: App.vue  App.vue.js  main.js  main.ts
(+137 files in other folders)
