[project]
name = "bfe-tools-server"
version = "0.1.0"
description = "bfe-tools 后端服务 — 前端工具集合站 API"
requires-python = ">=3.10"
license = { text = "MIT" }
readme = "README.md"

dependencies = [
    "fastapi>=0.115.0,<1.0.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.18",
    "aiofiles>=24.1.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "filetype>=1.2.0",
    "easyocr>=1.7.0",
    "torch>=2.0.0",
    "edge-tts>=7.2.8",
    "httpx>=0.28.0",
    "opencv-python-headless>=4.10.0",
    "faster-whisper>=1.1.0",
    "av>=14.0.0",
    "numpy>=1.26.0",
    "pillow>=11.0.0",
    "pymupdf>=1.25.0",
    "playwright>=1.50.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = ["__pycache__", ".venv", "migrations"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "W",   # pycodestyle warnings
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
]
ignore = []

[tool.ruff.lint.per-file-ignores]
"app/engine/__init__.py" = ["E402", "F811", "I001"]  # 循环依赖必须延迟 import；抽象类名冲突；逻辑注册顺序非字母序

[tool.mypy]
strict = true
python_version = "3.12"
ignore_missing_imports = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
