[package]
name = "bfe-tools-desktop"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "2.3", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
ureq = { version = "2", default-features = false, features = ["tls"] }

[build-dependencies]
tauri-build = { version = "2", features = [] }

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1
